--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "project.js",
   "type": "module",
   "scripts": {
+    "start": "node --env-file=.env main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/brendlij/programmieren-projekt-GruppeB#readme",
   "dependencies": {
+    "openai": "^4.83.0",
     "prompt-sync": "^4.2.0"
   }
 }
