--- a/tasks.json
+++ b/tasks.json
@@ -1,21 +1,10 @@
 [
   {
-    "id": 1743259009997,
+    "id": 1743261271815,
     "title": "Complete Coding Task",
     "description": "Complete the coding task",
-    "assignedTo": "admin1",
+    "assignedTo": "july",
     "deadline": "2025-03-30 23:59",
-    "priority": "medium",
-    "categories": [
-      "Code"
-    ]
-  },
-  {
-    "id": 1743259029806,
-    "title": "Task Placeholder",
-    "description": "Task Placeholder",
-    "assignedTo": "july2",
-    "deadline": "2025-04-12 12:00",
     "priority": "medium",
     "categories": [
       "Code"
@@ -33,14 +22,25 @@
     ]
   },
   {
-    "id": 1743259531598,
-    "title": "Task Details Unknown",
-    "description": "No further information provided.",
-    "assignedTo": "july",
+    "id": 1743262753602,
+    "title": "A",
+    "description": "Sad",
+    "assignedTo": "admin1",
     "deadline": "2025-03-30 09:00",
     "priority": "medium",
     "categories": [
       "Code"
+    ]
+  },
+  {
+    "id": 1743263257906,
+    "title": "No Title",
+    "description": "No Description",
+    "assignedTo": "admin1",
+    "deadline": "2025-03-29 20:00",
+    "priority": "low",
+    "categories": [
+      "sdg"
     ]
   }
 ]
